# pydb

./: pyproject.toml  requirements.txt
pydb/: __init__.py  __main__.py  main.py
